# CalcHidraulica

./: README.md  functions.py  main.py  pyproject.toml  requirements.txt
