[tool.poetry]
name = "calchidrograph"
version = "0.1.0"
description = "This application is one calculator to draw and make counts about Nikuradse Experience"
authors = ["AbelRapha <abelrapha@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sympy = "^1.12"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
